# FastAPI-URL-Shortener

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: hello-actions.yaml  python-checks.yaml
url-shortener/: .coveragerc  app_lifespan.py  main.py  manage.bat  manage.py  stuff.py
url-shortener/api/: __init__.py  main_views.py  redirect_views.py
url-shortener/api/api_v1/: __init__.py
url-shortener/api/api_v1/auth/: jwt_auth.py
url-shortener/api/api_v1/auth/services/: __init__.py  jwt_helper.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py  utils_jwt.py  validation.py
url-shortener/api/api_v1/short_urls/: crud.py  dependencies.py  redis.py  views.py
url-shortener/api/api_v1/short_urls/views/: __init__.py  details_views.py  list_views.py
url-shortener/certs/: jwt-private.pem  jwt-public.pem
url-shortener/commands/: __init__.py  cli.py  hello.py  tokens.py
url-shortener/core/: config.py
url-shortener/schemas/: short_url.py  user.py
url-shortener/testing/: __init__.py  conftest.py
url-shortener/testing/test_api/: conftest.py  test_main_views.py
url-shortener/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/: test_crud.py  test_dependencies.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/test_views/test_details_views/: test_delete.py  test_transfer.py  test_update.py  test_update_partial.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/test_views/test_list_views/: test_create.py
url-shortener/testing/test_schemas/: test_short_url.py  test_user.py
