[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "FastAPI URL Shortener"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "redis[hiredis]>=6.2.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
]


[tool.mypy]
strict = true
